# 04.MarketingPulse-260502

./: .gitignore  DEPLOY.md  POST_DEPLOY.md  README.md  plan.md  report.md
backend/: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
backend/apps/classifier/: keyword_matcher.py
backend/apps/collectors/: base.py  mocks.py  naver_datalab.py  naver_news.py  news_rss.py  registry.py  youtube.py  youtube_channels.py
backend/apps/collectors/management/commands/: run_collection.py  seed_data.py
backend/apps/content/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/content/migrations/: 0001_initial.py  0002_curatedchannel.py
backend/apps/core/: auth.py  views.py
backend/apps/dashboard/: urls.py  views.py
backend/apps/industries/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/industries/migrations/: 0001_initial.py
backend/apps/llm/: apps.py  base.py
backend/apps/llm/providers/: claude.py
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/scripts/: cron.sh
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminLayout.tsx  ContentList.tsx  DateNavigator.tsx  IndustryFilter.tsx  TrendList.tsx  VideoList.tsx
frontend/src/lib/: api.ts  queries.ts  utils.ts
frontend/src/types/: api.ts
(+14 files in other folders)
