[project]
name = "marketing-pulse-backend"
version = "0.1.0"
description = "MarketingPulse backend (Django + DRF)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "django-filter>=24.2",
    "mysqlclient>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "gunicorn>=22",
    "whitenoise>=6.7",
    "colorlog>=6.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
